# words-transformer-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci-version.yml  ci.yml
word-dictionary/: .gitignore  Cargo.toml  README.md
word-dictionary/src/: errors.rs  lib.rs
word-dictionary/tests/: tests.rs
words-transformer/: Cargo.toml  README.md  build.rs
words-transformer/src/: logo.rs  main.rs
words-transformer/src/gui/: mod.rs  separator.rs
