[package]
name = "words-transformer"
version = "0.1.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.62"
publish = false

[dependencies]
word-dictionary = { path = "../word-dictionary"  }

iced = { version = "0.3", features = ["canvas"]  }
lazy-static-include = "3.0.7"
once_cell = "1.5"
copypasta = "0.8.2"

[build-dependencies]
slash-formatter = "3.1"
image = "0.24"

[features]
"glow" = ["iced/glow"]
"glow_canvas" = ["iced/glow_canvas"]